--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <td> Szatymaz- Kistelek </td>
                 <td> 5 </td> 
             </tr>
-            <tr>
+            <tr class="vilagos">
                 <td> 9:22 </td>
                 <td>  </td>
                 <td> SZ </td>
@@ -43,7 +43,7 @@
                 <td> Szatymaz- Kistelek </td>
                 <td> 4 </td>
             </tr>
-            <tr>
+            <tr class="vilagos">
                 <td> 9:24 </td>
                 <td>  </td>
                 <td> SZ </td>
@@ -59,7 +59,7 @@
                 <td> Cegléd- Kecskemét </td>
                 <td> 5 </td>
             </tr>
-            <tr>
+            <tr class="vilagos">
                 <td> 9:30 </td>
                 <td>  </td>
                 <td> IC </td>
