--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Induló vonatok</title>
+    <link rel="stylesheet" type=text/css href="./indulo_vonatok.css">
 </head>
 <body>
     <table>
@@ -18,37 +19,45 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr class="paros">
                 <td>8:31</td>
-                <td>8:43</td>
+                <td id="keses">8:43</td>
                 <td>717</td>
                 <td>Budapest-Nyugati</td>
                 <td>Kecskemét-Cegléd</td>
                 <td>5</td>
             </tr>
-            <tr>
-                <td>8:38</td>
+            <tr class="paratlan">
+                <td>8:33</td>
                 <td></td>
                 <td>7022</td>
                 <td>Szeged</td>
                 <td>Kistelek-Szatymaz</td>
                 <td>4</td>
             </tr>
-            <tr>
+            <tr class="paros">
+                <td>9:30</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>712</td>
+                <td>Szeged</td>
+                <td>Kistelek-Szatymaz</td>
+                <td>3</td>
             </tr>
-            <tr>
+            <tr class="paratlan">
+                <td>9:31</td>
                 <td></td>
+                <td>727</td>
+                <td>Budapest-Nyugati</td>
+                <td>Kecskemét-Cegléd</td>
+                <td>5</td>
+            </tr>
+            <tr class="paros">
+                <td>9:44</td>
                 <td></td>
+                <td>7897</td>
+                <td>Külsőhalas</td>
                 <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+                <td>3</td>
             </tr>
         </tbody>
     </table>
