css update and link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type=text/css href="./styles.css">
 </head>
 <body>
-    <table>
+    <table width="75%">
         <thead>
                 <tr>
                     <th> Tervezett Érkezés </th>
@@ -67,9 +67,9 @@
                 <td> Szatymaz- Kistelek </td>
                 <td> 3 </td>
             </tr>
-        </tbody>
-        
+        </tbody>    
     </table>
     
+    <a href="http://127.0.0.1:5500/programoz%C3%A1s/2025_02_01_html_mav/indulo_vonatok.html"> Induló vonatok </a>
 </body>
 </html>
