--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type=text/css href="./indulo_vonatok.css">
 </head>
 <body>
-    <table>
+    <table width="75%">
         <thead>
             <tr>
                 <th>Tervezett indulás</th>
@@ -20,48 +20,48 @@
         </thead>
         <tbody>
             <tr class="paros">
-                <td>8:31</td>
-                <td id="keses">8:43</td>
-                <td>717</td>
-                <td>Budapest-Nyugati</td>
-                <td>Kecskemét-Cegléd</td>
-                <td>5</td>
+                <td class="border">8:31</td>
+                <td id="keses" class="border">8:43</td>
+                <td class="border">717</td>
+                <td class="border">Budapest-Nyugati</td>
+                <td class="border">Kecskemét-Cegléd</td>
+                <td class="border">5</td>
             </tr>
             <tr class="paratlan">
-                <td>8:33</td>
-                <td></td>
-                <td>7022</td>
-                <td>Szeged</td>
-                <td>Kistelek-Szatymaz</td>
-                <td>4</td>
+                <td class="border">8:33</td>
+                <td class="border"></td>
+                <td class="border">7022</td>
+                <td class="border">Szeged</td>
+                <td class="border">Kistelek-Szatymaz</td>
+                <td class="border">4</td>
             </tr>
             <tr class="paros">
-                <td>9:30</td>
-                <td></td>
-                <td>712</td>
-                <td>Szeged</td>
-                <td>Kistelek-Szatymaz</td>
-                <td>3</td>
+                <td class="border">9:30</td>
+                <td class="border"></td>
+                <td class="border">712</td>
+                <td class="border">Szeged</td>
+                <td class="border">Kistelek-Szatymaz</td>
+                <td class="border">3</td>
             </tr>
             <tr class="paratlan">
-                <td>9:31</td>
-                <td></td>
-                <td>727</td>
-                <td>Budapest-Nyugati</td>
-                <td>Kecskemét-Cegléd</td>
-                <td>5</td>
+                <td class="border">9:31</td>
+                <td class="border"></td>
+                <td class="border">727</td>
+                <td class="border">Budapest-Nyugati</td>
+                <td class="border">Kecskemét-Cegléd</td>
+                <td class="border">5</td>
             </tr>
             <tr class="paros">
-                <td>9:44</td>
-                <td></td>
-                <td>7897</td>
-                <td>Külsőhalas</td>
-                <td></td>
-                <td>3</td>
+                <td class="border">9:44</td>
+                <td class="border"></td>
+                <td class="border">7897</td>
+                <td class="border">Külsőhalas</td>
+                <td class="border"></td>
+                <td class="border">3</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="http://"></a>
+    <a href="http://127.0.0.1:5500/programoz%C3%A1s/2025_02_01_html_mav/index.html"> Érkező vonatok </a>
 </body>
 </html>
