link and css changes

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <table width="75%">
         <thead>
                 <tr>
-                    <th> Tervezett Érkezés </th>
-                    <th> Érkezés </th>
+                    <th colspan="2"> Tervezett Érkezés </th>
                     <th> Vonat </th>
                     <th> Honnan </th>
                     <th> Hova </th>
@@ -70,6 +69,6 @@
         </tbody>    
     </table>
     
-    <a href="http://127.0.0.1:5500/programoz%C3%A1s/2025_02_01_html_mav/indulo_vonatok.html"> Induló vonatok </a>
+    <a href="indulo_vonatok.html"> Induló vonatok </a>
 </body>
 </html>
