--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -10,8 +10,7 @@
     <table width="75%">
         <thead>
             <tr>
-                <th>Tervezett indulás</th>
-                <th>Várható indulás</th>
+                <th colspan="2">Tervezett indulás</th>
                 <th>Vonat</th>
                 <th>Honnan</th>
                 <th>Hova</th>
@@ -62,6 +61,6 @@
         </tbody>
     </table>
 
-    <a href="http://127.0.0.1:5500/programoz%C3%A1s/2025_02_01_html_mav/index.html"> Érkező vonatok </a>
+    <a href="index.html"> Érkező vonatok </a>
 </body>
 </html>
