--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,8 +10,15 @@
     <table width="75%">
         <thead>
                 <tr>
-                    <th colspan="2"> Tervezett Érkezés </th>
+                    <th> 08:43:10 </th>
+                    <th> Ankunft </th>
                     <th> Vonat </th>
+                    <th colspan="2"> Település </th>
+                    <th> <img src="BSicon_MAV.svg.png" alt="MÁV logó" height="25px"></th>
+                </tr>
+                <tr>
+                    <th colspan="2"> Érkezés </th>
+                    <th> ID </th>
                     <th> Honnan </th>
                     <th> Hova </th>
                     <th> Vágány </th>
