--- a/indulo_vonatok.html
+++ b/indulo_vonatok.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,15 @@
     <table width="75%">
         <thead>
             <tr>
-                <th colspan="2">Tervezett indulás</th>
+                <th>08:43:10</th>
+                <th>Erwartete abfart</th>
+                <th colspan="2">Induló vonatok</th>
+                <th> Departures</th>
+                <th> <img src="BSicon_MAV.svg.png" alt="Máv logó" height="25px"></th>
+            </tr>
+            <tr>
+                <th>Tervezett indulás</th>
+                <th>Várható indulás</th>
                 <th>Vonat</th>
                 <th>Honnan</th>
                 <th>Hova</th>
